# osc-vad

./: README.md  pyproject.toml
src/osc_vad/: __init__.py  fsmn.py  utils.py
src/osc_vad/assets/fsmn/: model.onnx
