[project]
name = "osc-vad"
version = "0.1.0"
description = "Fast Voice Activity Detection Inference with Onnxruntime"
readme = "README.md"
authors = [
    { name = "wangmengdi", email = "790990241@qq.com" }
]
requires-python = ">=3.10"
dependencies = [
    "loguru>=0.7.3",
    "onnxruntime>=1.21.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "onnxconverter-common>=1.14.0",
    "pydub>=0.25.1",
    "soundfile>=0.13.1",
]
